# ASI

./: AGENTS.md  CONTRIBUTING.md  README.md  Self_Reflection.md  ideas.md  parallel_tasks.md  pyproject.toml  quantized_vector_search_tasks.md  requirements.txt  steps_summary.md  torch.py
asi/: __init__.py
configs/: ab_prompt_example.json  ab_prompt_example_b.json  adversarial_eval.yaml  knowledge_base.yaml  knowledge_base_client.yaml  region_providers.yaml
docs/: Implementation.md  Plan.md  collaboration_client.html  load_balance.md  merge_conflict.md  micro_inference.md  papers.md  pullrequest_merge_conflict.md  quantized_vector_search_tasks.md
proto/: fhe_memory.proto  kg_memory.proto  lineage.proto  memory.proto  reasoning_graph.proto  scheduler.proto
scripts/: ab_evaluate.py  ab_prompt_eval.py  adaptive_cost_schedule.py  ar_robot_demo.py  attention_analysis.py  benchmark_analog.py  benchmark_gpu_vs_analog.py  benchmark_moe.py  build_pq_index.py  causal_sim.py  check_blockchain_provenance.py  check_provenance.py  code_refine.py  continuous_eval.py  cross_lingual_reasoning_demo.py  cross_modal_retrieval_benchmark.py  dataset_bias_report.py  dataset_summary.py  distill_world_model.py  distributed_anomaly_demo.py  distributed_eval.py  distributed_memory_benchmark.py  edge_memory_client_demo.py  export_micro.py  export_onnx.py  export_wasm.py  federated_bci_feedback_demo.py  federated_edge_rl_demo.py  federated_memory_sync.py  federated_rl_train.py  federated_train.py  federated_world_model_train.py  generate_model_card.py  got_3d_viewer.py  got_visualizer.py  (+35 more)
(+633 files in other folders)
