[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asi"
version = "0.0.0"
description = "ASI prototype modules"
authors = [{name = "ASI"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"asi" = "src"}
packages = ["asi"]
